trunk/Archive2/1f/6ff3647f61c189/output
main.cpp: In function 'int main()':
main.cpp:27:7: error: cannot declare variable 'b_instance' to be of abstract type 'B'
     B b_instance;
       ^
main.cpp:16:7: note:   because the following virtual functions are pure within 'B':
 class B : public A
       ^
main.cpp:13:18: note: 	virtual void A::foo(X)
     virtual void foo(X x) = 0; 
                  ^
